# OrderData-pipeline

./: .env.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: generate_orders.py  transfer_orders.py
